tests/baselines/reference/collisionThisExpressionAndLocalVarInFunction.errors.txt
==== tests/cases/compiler/collisionThisExpressionAndLocalVarInFunction.ts (1 errors) ====
    var console: {
        log(val: any);
    }
    function x() {
        var _this = 5;
            ~~~~~~~~~
!!! collisionThisExpressionAndLocalVarInFunction.ts(5,9): error TS2200: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
        x => { console.log(this.x); };
    }